--- a/content/work-finance/financials.mdx
+++ b/content/work-finance/financials.mdx
@@ -41,24 +41,41 @@ Many freelancers also opt for international wire transfers as an alternative.
 There are 18 banks that operate in Armenia. Some are locally owned, some are subsidiaries of international banks. All have competitive advantages, so it's best to shop around for each product offered. While some offer higher interest rates on deposits, others have better terms for mortgage loans or the transferring of large amounts from abroad.
 
 ### International Subsidiaries
-*   **Byblos Bank Armenia**: Focus on retail banking (loans, deposits). Offers a **Diaspora Housing Loan** for non-residents.
-*   **Mellat Bank**: Iranian bank (Est. 1992). Often the only option for Iranians without Armenian citizenship.
-*   **VTB Bank Armenia**: Russian subsidiary with the widest branch network (67 branches).
+
+*   **Byblos Bank Armenia**: An Armenian subsidiary of the Lebanese bank, the focus here is on the development of retail banking products for individuals and legal entities such as term and demand deposits, deposit certificates, auto loans, housing and personal loans, as well as small business loans. Offers a **Diaspora Housing Loan**, which enables non-resident Armenians to get a home in the Motherland and benefit from favorable terms when purchasing their own place in Armenia.
+
+*   **Mellat Bank**: "Mellat Bank" Closed Joint-stock Company was established in May 1992 based on a joint declaration about "Friendship and Cooperation" between the Republic of Armenia and Islamic Republic of Iran. The bank provides a number of services both for individuals and businesses including loans (mortgage to buy/repair, car, consumer, education, business), and investments. Most Iranians (without Armenian citizenship) can ONLY open an account here.
+
+*   **VTB Bank Armenia**: VTB Bank Armenia is a Russian bank subsidiary with the widest and most extensive branch network in Armenia: a total of 67 branches, of which 24 are in Yerevan and the remaining 43 are in all regions and cities of the country. Services and products for individuals and businesses include loans and investment opportunities: brokerage and custody services, trade operations, consulting services and issue of securities.
 
 ### Armenian Banks
-*   **Acba Bank**: Leading institution, exclusive partner of American Express and services JCB cards. Has a free digital platform and 63 branches.
-*   **Ameriabank**: Universal bank with corporate and retail services. Shareholders include ADB and EBRD. Offers premium services and online account opening. Also offers a housing loan program similar to Byblos.
-*   **Araratbank**: Absorbed Armenian Development Bank. Offers "ArCa Child" cards for Child Care Benefits.
-*   **Ardshinbank**: Large network, focuses on project financing and energy sector. Acquired HSBC Armenia in 2024 (renamed to **Ardshininvestbank**).
-*   **Artsakhbank**: Assists SMEs, offers "ArCa Pension" cards.
-*   **Evocabank**: Positions itself as the first digital bank. Offers "Affordable Housing for Young Families" loans and StroyMaster Domophone payments.
-*   **Amio Bank**: Offers high deposit savings rates.
-*   **Armeconombank**: Offers "Women in business" trade loans (tourism, agriculture).
-*   **ArmSwissBank**: Private investment bank offering wealth management services.
-*   **Converse Bank**: Good for e-commerce and trade financing. Offers **CAD accounts** and access to Zvartnots business lounge for some cardholders.
-*   **Inecobank**: High savings rates, user-friendly app (InecoMobile), and InecoPay. **Easily opens accounts for Iranian-Armenians**. Offers free Social Package accounts.
-*   **Unibank**: Specializes in retail/private banking. Unistream transfers available via app.
-*   **ID Bank**: Offers micro-loans and energy-efficient renovation loans ("Jerm Ojakh").
+
+*   **Acba Bank**: Acba bank is one of the leading financial institutions in Armenia, that offers the latest advanced and latest technological solutions to its clients. The bank issues and services international VISA and MasterCard, as well as local ArCa payment cards. Acba bank is also the exclusive representative of American Express payment system in Armenia, moreover, it is servicing JCB Japan international cards. The bank allows you to manage accounts for free via Acba digital online platform and application from anywhere in the world, without visiting the bank. Acba bank has 63 branches (including the Head Office): 19 of the branches are located in Yerevan and the others in the 10 marzes of Armenia. The bank also has around 180 ATMs on the entire territory of Armenia.
+
+*   **Ameriabank**: Ameriabank CJSC is a universal bank offering corporate, investment and retail banking services for individual and corporate clients: special offers; loans; deposits; cards and transfers. Investment banking services such as mergers and acquisitions are also available. Huge plus is shareholders such as the Asian Development Bank and European Bank for Reconstruction and Development. VIP Solutions known as AmeriaBank Premium available for higher-end clients. You can open an account from outside Armenia or online in general. Also offers a housing loan program similar to Byblos.
+
+*   **Araratbank**: Araratbank proved to be strong during the last bout of mergers, absorbing the Armenian Development Bank. Services for individuals include various types of loans, deposits and investments, cards (pay attention to ArCa Child card for Child Care Benefit), and money transfers. Services for business include SME and agro loans, as well as international trade finance.
+
+*   **Ardshinbank**: Ardshinbank provides a full range of banking services. It focuses on project financing of large corporate customers, primarily in the strategic industries and energy sector, as well as lending to small and medium-sized businesses, e-banking, and international money transfers. **No escrow accounts.** Acquired HSBC Armenia in 2024 (renamed to **Ardshininvestbank** on November 29, 2024; clients transitioned December 2, 2024 while retaining existing services and terms, complemented by numerous additional benefits).
+
+*   **Artsakhbank**: Artsakhbank assists in establishment and development of SMEs. Has few branches but offers all typical banking services. Also one of the banks for pension accounts with ArCa Pension cards.
+
+*   **Evocabank**: Positions itself as the first digital bank in Armenia, providing fast, simple, innovative services for both individual and corporate clients. Offers accounts, transfers, debit and credit cards, deposits, personal safe boxes, and a wide range of loans (car, mortgage, student loans, among others). Notable programs include "Affordable Housing for Young Families" mortgage loans. One of the only places you can pay for StroyMaster Domophone.
+
+*   **Amio Bank**: Amio bank provides banking to individuals and organizations, primarily supporting business entities. Individuals can take advantage of various services including established pension system accounts. Offers the highest deposit savings interest rates.
+
+*   **Armeconombank** (AEB): A universal financial and credit institution offering a wide package of services to individuals (consumer loans, mortgage loans, credit lines, deposits) and businesses (trade loans and credit lines). Notable programs include "Women in business" project trade loans for tourism industry, agriculture, and renewable energy development.
+
+*   **ArmSwissBank**: A private investment bank providing services and products for both individuals and corporate clients, including accounts, payments, deposits, cards, insurance, and investment services. Loans for corporate clients include business development, trade finance, and agriculture. For individuals, offers consumer and mortgage loans.
+
+*   **Conversebank**: Offers various bank services for individuals and legal entities, with all main deposit, loan, and transaction services. Specializes in e-commerce, bond sales, and trade financing. Wide range of loans available for businesses covering SME, agriculture, and women's business. One of the only banks with **CAD accounts** available. Some cards allow free access to the business lounge at Zvartnots Airport. Higher-end clients are serviced through the Converse Club.
+
+*   **Inecobank**: Notable for high savings deposit interest rates, very user-friendly app, and INECOPAY cashless payment option. Accounts for social benefits and pensions are available. Social Package accounts have free opening and service. **Easily opens accounts for Iranian-Armenians**. Provides various types of consumer and mortgage loans along with cards, transfers, investment, and insurance services.
+
+*   **Unibank**: Unibank specializes in retail banking with Private Banking direction and assisting SMEs. Private Banking includes deposits, credit lines, international concierge service, lounge key service, and deposit boxes. Using the UniMobile app, you can repay loans, pay utility bills, and send/receive Unistream money transfers.
+
+*   **ID Bank**: One of the leading commercial banks in Armenia offering retail, business, and investment services. Offers micro-loans as well, such as the "Jerm Ojakh" program for energy-efficient renovation of apartments and houses.
+
 *   **Fastbank**: Provides a wide range of services to customers 24/7 in 33 branches throughout Yerevan and the regions of the Republic of Armenia.
 
 For comprehensive information about banks and Armenia's financial system, visit [banks.am](https://www.banks.am) or [cba.am](https://www.cba.am) (Central Bank of Armenia).
