more content fixes

--- a/content/move/arrival.mdx
+++ b/content/move/arrival.mdx
@@ -5,7 +5,7 @@ description: Airport information and transportation
 
 # Arriving in Armenia
 
-You've made it! Most arrivals are via **Zvartnots International Airport** (Yerevan) or **Gyumri Airport**. You may also arrive by land from Georgia or Iran.
+You've arrived in Armenia! Chances are, this was by air at the **Zvartnots International Airport** or **Gyumri Airport**. You may have driven over the Iran or Georgian borders as well.
 
 ## Zvartnots Airport to City Center
 The airport is about 20 minutes from the city center. You have the option of taking a taxi, public transportation, or the airport shuttle bus.
@@ -14,17 +14,11 @@ The airport is about 20 minutes from the city center. You have the option of tak
 
 | Option | Cost | Notes |
 | :--- | :--- | :--- |
-| **Taxi** | 2,000 - 6,000 AMD | In case you take personal taxi, make sure you negotiate the final price from the beginning. You can also use taxi apps such as GG, Yandex Taxi, Utaxi to order a car. |
-| **Express Bus No. 201** | 300 AMD | Departs every 30 mins (07:00 - 21:30). Complete with WiFi. Takes you to and from Republic Square. You can track the route of the express by clicking [here](https://t-armenia.com/en/yerevan-airport-shuttle-bus). |
-| **Public Bus No. 100** | 100 AMD | Connects city center with Zvartnots Airport. From January 1, 2025, cashless payment only via transport cards. You can check fares [here](https://t-armenia.com/en/fares). |
+| **Taxi** | 2,000 - 6,000 AMD | Taxi cost: 2,000-6,000 AMD, depending on the type of taxi, km travelled, etc. In case you take personal taxi, make sure you negotiate the final price from the very beginning. You can also use taxi apps such as [**GG**](https://gg.taxi/en), [**Yandex Taxi**](https://taxi.yandex.com/), [**Utaxi**](https://utaxi.am/) to order a car. |
+| **Express Bus No. 201** | 300 AMD | Departing every 30 minutes from 07:00 to 22:00, the shuttle costs 300 AMD, complete with WiFi. It takes you to and from Republic Square. You can track the route of the bus by clicking [here](https://t-armenia.com/en/yerevan-airport-shuttle-bus). |
+| **Public Bus No. 100** | 100 AMD | It connects city center with Zvartnots Airport. From January 1, 2025 the new fares apply. You can check them [here](https://t-armenia.com/en/fares). |
 
 ## Arriving by Land
 
-### From Georgia
-- **Route**: Via Bagratashen checkpoint.
-- **Duration**: ~4 hours to Yerevan (221 km).
-- **Train**: If you arrive via train, there is also a train from Tbilisi that takes longer (around 10h) but much more comfortable, bringing you right to the Sasuntsi Davit railway station. Train 371 departs Tbilisi at 20:20 and arrives in Yerevan at 06:55 the next day (operates on odd-numbered days).
-- **Cost**: Budget between 7,000 and 25,000 AMD for this trip to and from Tbilisi. Please check the schedules [here](https://www.railway.ge/en/traffic-general-schedule/) or [here](https://t-armenia.com/).
+If you are planning to arrive by land, there are three transportation routes taking you to Armenia from Georgia, Iran, and Russia. The most optimal road to Armenia from Georgia is via Bagratashen to Yerevan (221 km). If you arrive from Iran, you will have a 7.5 h drive from the border with Armenia to Yerevan (380 km). There is also a train from Tbilisi that takes longer but much more comfortable, bringing you right to the Sasuntsi Davit railway station. Budget between 7,000 and 25,000 AMD is for this trip to and from Tbilisi. Please, check the schedules [here](https://www.railway.ge/en/traffic-general-schedule/) or [here](https://t-armenia.com/).
 
-### From Iran
-- **Duration**: ~7.5 hours from the border (380 km).
