--- a/content/move/moving-belongings.mdx
+++ b/content/move/moving-belongings.mdx
@@ -27,6 +27,8 @@ You may be eligible if you are:
 *   *Note*: You must submit a written request within **60 days** of arrival, attaching the necessary documents proving temporary foreign residency. This option is available once every 3 years.
 *   **Important**: You cannot apply for both options simultaneously.
 
+<Note>A repatriate can take advantage of this tax exemption once every five years.</Note>
+
 ## What You Can Bring
 *   **Personal Items**: Unlimited clothing, books, bedding, home accessories, etc.
 *   **Electronics**: Max 3 of each type for personal and daily purposes (must be used and show wear/tear). If new or in original boxes, they must be cleared through customs.
@@ -45,6 +47,10 @@ You may be eligible if you are:
 ## The Process
 
 **Before Shipping**: It is recommended to send a list of items you plan to bring to the customs office beforehand, just to make sure there isn't anything taxable.
+
+<Note>
+**PRO TIP**: Check out [this color instruction](https://migration.e-gov.am) (available only in Armenian) describing this process in detail.
+</Note>
 
 1.  **Get Status**: Obtain residency/citizenship and register your address (*grantsoum*).
     *   *Cost*: Grantsoum costs 1,000 AMD - to be paid at the bank to the specific number provided, or by terminal at 100 AMD extra cost.
