--- a/content/move/planning.mdx
+++ b/content/move/planning.mdx
@@ -56,7 +56,7 @@ Check the procedures for importing your goods.
 *See the Moving Your Personal Belongings section for detailed rules.*
 
 ## Step 6: Moving Financial Assets
-Moving your financial assets to Armenia may seem difficult, but there are easy ways to do it:
+Moving your financial assets to Armenia may seem somewhat difficult to do but there are easy ways to do it:
 1.  **Cash**: You can bring up to **$10,000** (or equivalent) without declaration. Amounts over $10,000 must be declared.
     <Note>Import and export of local currency is prohibited.</Note>
 2.  **Bank Transfer**: Recommended for amounts over $10,000 via International SWIFT transfers.
@@ -64,17 +64,19 @@ Moving your financial assets to Armenia may seem difficult, but there are easy w
 4.  **Online Accounts**: Some banks allow opening accounts online.
 
 ## Step 7: Improve/Learn Armenian
-Eastern Armenian is the official language. Knowledge of Russian and English is also helpful.
+Armenian (Eastern) is the official language, although knowledge of Russian and English will also be helpful.
 **Ways to learn:**
-1.  **Online**: Apps like [**AYOlingo**](https://apps.apple.com/us/app/ayolingo-learn-armenian/id1367151083) ([Android](https://play.google.com/store/apps/details?id=org.birthrightarmenia.ayolingo)), or the [**Armenian Virtual College**](https://www.avc-agbu.org/).
-2.  **Private Lessons**: Many tutors are available in Armenia (search on our network).
-3.  **Media**: Read online newspapers, books, or watch Armenian TV/series.
-4.  **Free Classes**: Follow [Repat Armenia language courses](https://www.repatarmenia.org/services-and-programs/armenian-language-courses) or the [**Office of the High Commissioner for Diaspora Affairs**](https://english.hartak.am/services/40b8ba7e-5f81-43f5-b33d-493bd88bee12/online/) ([Facebook](https://www.facebook.com/DiasporaGovAm)) for free class announcements.
+1.  **Online**: There are several websites you can use to learn Armenian, as well as apps, depending on your level and commitment to the language. Try the [**Armenian Virtual College**](https://www.avc-agbu.org/) which offers a variety of courses to help you in the process or download [**AYOlingo application**](https://apps.apple.com/us/app/ayolingo-learn-armenian/id1367151083) ([Android](https://play.google.com/store/apps/details?id=org.birthrightarmenia.ayolingo)).
+2.  **Private Lessons**: While more expensive, it could be great. Thankfully, especially since there are many opportunities to take lessons in the country, you can look for relevant offers on our network.
+3.  **Media**: Read Armenian books and newspapers. Armenian language newspapers and books, whether online or in print, are available in different genres, from Armenian classics to translated works of contemporary authors.
+4.  **Watch Armenian television**: If you like drama, Armenian series are great. If you are interested in Armenian music competitions, Radio is also an option. Much of the YouTube channel is available.
+5.  **Free Classes**: Follow [Repat Armenia language courses](https://www.repatarmenia.org/services-and-programs/armenian-language-courses) or check out more resources from the [**Office of the High Commissioner for Diaspora Affairs**](https://english.hartak.am/services/40b8ba7e-5f81-43f5-b33d-493bd88bee12/online/) ([Facebook](https://www.facebook.com/DiasporaGovAm)) for online classes and tutors.
 
 ## Step 8: Employment & Business
-Start searching for opportunities early.
-- **Research**: Have an idea of in-demand jobs and qualifications.
-- **Be Flexible**: Consider areas close to your major or where you can apply skills.
-- **Note**: Armenian companies often hire immediately and may not do long-distance recruitment. If they offer an online interview, expect to be hired within a few weeks.
+Start searching for employment/business opportunities. This is the most important aspect for most, and where most of your efforts should go. The earlier you begin the search process, the greater the likelihood of success in securing financial sustainability and a job that fits your needs and experience.
 
-*See the Employment section for more details.*
+Start doing research in advance on what the job market is like, salaries, and your position within it. Have an idea of jobs in-demand, and the required qualifications. For more information please refer to the Employment section.
+
+**PRO TIP**: Be flexible in the job search process by taking into consideration areas close to your major and/or things related to the skillset of your skills. You can get more tips in this section.
+
+**NOTE**: Armenian companies are not in the habit of long-distance recruitment. If they raise an employee, they expect you to hire immediately. At the most, you'll have 2 weeks before you should be ready to begin.
