--- a/content/move/planning.mdx
+++ b/content/move/planning.mdx
@@ -8,26 +8,20 @@ description: A step-by-step guide to preparing for your move to Armenia
 Proper planning is essential for a smooth transition. Follow these steps to prepare for your repatriation.
 
 ## Step 1: Contact Repat Armenia
-Reach out to us for advice and planning.
+Contact Repat Armenia Foundation for repatriation advice and to plan your repatriation process. Also, we suggest joining the **Armenian Repatriates Network** (+12,000 members) for soft landing and practical tips on different aspects of repatriation. The more you know in advance, the more likely you are to plan effectively and create a positive experience for yourself and your family.
+
+**Repat Armenia Foundation**
 - **Tel**: +374 91 46 46 60
 - **Email**: repatriation@repatarmenia.org
 - **Website**: [www.repatarmenia.org](http://www.repatarmenia.org)
 
-We also recommend joining the **Armenian Repatriates Network** (12,000+ members) for practical tips and community support.
-
 ## Step 2: Plan a Pilot Trip
-A pilot trip is highly recommended to discover opportunities. Repat Armenia can organize meetings with:
-- Experienced repats
-- Public institutions
-- Recruiters
-- Business consulting and legal agencies
-- Educational institutions
-
-Consider volunteering programs like [**Birthright Armenia**](https://birthrightarmenia.org/) or [**Armenian Volunteer Corps**](https://armenianvolunteer.org/) to experience the country from the inside.
+Plan your pilot trip which is highly recommended to discover opportunities in Armenia. Once you contact us, we get to know your needs/request, expectations, and based on that we connect you with the relevant public institutions, potential recruiters, business consulting and legal agencies, educational institutions, and experienced repatriates matching your needs/request. This will help you with the proper planning of your move and soft landing. You can also consider taking part in our hands on volunteering programs like [**Birthright Armenia**](https://birthrightarmenia.org/) or [**Armenian Volunteer Corps**](https://armenianvolunteer.org/).
 
 ## Step 3: Prepare Documents
-Gather your documents and their copies. Keep your originals safe.
-**Essential documents to bring:**
+Prepare a set of documents and its copies and make sure you have your originals. Please, gather your documents before moving, so you will be able to seamlessly do paperwork with less burden once you arrive (education, registration, legal status, employment options, and accommodations).
+
+Make sure you take all these five boxes following:
 - Birth certificate (translated and notarized)
 - Baptism certificate (translated and apostilled if necessary)
 - Education certifications (translated and notarized)
@@ -37,23 +31,26 @@ Gather your documents and their copies. Keep your originals safe.
 - Vaccination documentation
 
 <Note>
-Documents should be translated and notarized either in your country of origin or in Armenia. Pay special attention to the **apostille** process, as it must be done in the country of origin.
+These documents shall be translated, notarized either in the country you are coming from, or in Armenia. Please pay special attention to the apostilling process as it has to be done in the country you are coming from.
 </Note>
 
 ## Step 4: Choose Your Legal Status
-Decide whether you will apply for **residency** or **citizenship**. You can start this process in your current country or after arriving in Armenia.
-*See the Legal Status section for more details.*
+Choose your legal status in Armenia. You can apply for residency in Armenia or citizenship either in your country where you currently reside or once you arrive in Armenia. For more detailed information about the process please refer to the [Legal Status in Armenia section](/move/legal-status).
 
 ## Step 5: Moving Personal Belongings
-Check the procedures for importing your goods.
-**What you can bring tax-free:**
-- Used personal and household items (no original packaging).
-- Max 3 of each electronic item (must show wear/tear).
-- 1 complete set of furniture per room type.
-- 1 car for personal use (owned for at least 6 months prior).
-- Unlimited personal items (clothing, books, bedding).
+Check the procedures of moving personal belongings before you arrive in Armenia.
 
-*See the Moving Your Personal Belongings section for detailed rules.*
+Repatriates who have permanent residency status (spent at least 915 days (last 5 years) outside of Armenia for the last 5 years or has a permanent residency holder outside of Armenia) can bring tax-free used personal and household items with no original factory packaging and labelling that should arrive to Armenia within 18 months.
+
+Things you can easily bring are:
+- 3 maximum of each electronic piece used for personal and daily purposes, as long as it's not new and in original boxes. It must show some wear and tear.
+- 1 complete set of each type of furniture only for personal use
+- 1 car for personal use that you can prove you have owned for at least 6 months prior to moving
+- Unlimited personal items that you can prove you brought in without fund (this includes, clothing, home accessories, bedding, books, and such items. Please DON'T bring paper, tissues, etc.)
+
+The goods can be imported tax-free within 18 months since obtaining permanent residence or special residency in Armenia. The date of "arrival for permanent residence" is the date when the repatriate registers his/her address with the police. If the address had already been registered, the day of filing a statement with the customs office is considered the "day of arrival for permanent residence." The repatriate must file an application for tax-free import with the customs office (on paper or electronically) specifying the name, weight and number of items imported. The customs office has up to 3 working days to grant or reject the application.
+
+*See the [Moving Your Personal Belongings section](/move/moving-belongings) for detailed rules.*
 
 ## Step 6: Moving Financial Assets
 Moving your financial assets to Armenia may seem somewhat difficult to do but there are easy ways to do it:
