--- a/content/move/moving-belongings.mdx
+++ b/content/move/moving-belongings.mdx
@@ -60,7 +60,7 @@ You may be eligible if you are:
     *   *Timeline*: Usually issued within **5 working days**.
 3.  **Submit to Customs**: The repatriate must file an application for tax-free import with the customs office (on paper or electronically), specifying the name, weight, and quantity of imported personal goods.
     *   Send your documents and list of goods to the State Revenue Committee (*secretariat@petekamutner.am*).
-    *   *Processing*: The customs office has up to **3 working days** to grant or reject the application.
+    *   *Processing*: The customs office has up to **10 days** to grant or reject the application.
 4.  **Clear Customs**: The taxation waiver will be sent to the cargo office, where you will show up in person to grab your belongings when everything is ready. The company might also have a door-to-door service. Check about what that means exactly from the beginning.
 
 <Note>
