--- a/content/move/planning.mdx
+++ b/content/move/planning.mdx
@@ -40,15 +40,15 @@ Choose your legal status in Armenia. You can apply for residency in Armenia or c
 ## Step 5: Moving Personal Belongings
 Check the procedures of moving personal belongings before you arrive in Armenia.
 
-Repatriates who have permanent residency status (spent at least 915 days (last 5 years) outside of Armenia for the last 5 years or has a permanent residency holder outside of Armenia) can bring tax-free used personal and household items with no original factory packaging and labelling that should arrive to Armenia within 18 months.
+A "repatriate" is a person who has permanently resided (i.e. spent at least 915 days per year) outside of Armenia for the last 5 years or has a status of a refugee. You are allowed to import tax-free used personal and household items with no original factory packaging and labelling that were purchased before his arrival to Armenia.
 
 Things you can easily bring are:
-- 3 maximum of each electronic piece used for personal and daily purposes, as long as it's not new and in original boxes. It must show some wear and tear.
+- 3 maximum of each electronic piece used for personal and daily purposes, so long as it's not new and in original boxes. It must show some wear and tear, at least
 - 1 complete set of each type of furniture only for personal use
 - 1 car for personal use that you can prove you have owned for at least 6 months prior to moving
-- Unlimited personal items that you can prove you brought in without fund (this includes, clothing, home accessories, bedding, books, and such items. Please DON'T bring paper, tissues, etc.)
+- Personal items outside of those mentioned can be brought in without limit (this includes, clothings, home accessories, bedding, books, and such items. Please DON'T bring pipes, toilets, etc.)
 
-The goods can be imported tax-free within 18 months since obtaining permanent residence or special residency in Armenia. The date of "arrival for permanent residence" is the date when the repatriate registers his/her address with the police. If the address had already been registered, the day of filing a statement with the customs office is considered the "day of arrival for permanent residence." The repatriate must file an application for tax-free import with the customs office (on paper or electronically) specifying the name, weight and number of items imported. The customs office has up to 3 working days to grant or reject the application.
+The goods can be imported tax-free within 18 months following the repatriate's "arrival for permanent residence" to Armenia. The date of "arrival for permanent residence" is the day when the repatriate registers his address with the police (or, if the address had already been registered, the day of filing a statement with the customs office). It must happen within 180 days after the repatriate's actual arrival to Armenia. The repatriate must file an application for tax-free import with the customs office specifying the name, weight and number of items imported. The customs office has up to 10 days to grant or reject the application.
 
 *See the [Moving Your Personal Belongings section](/move/moving-belongings) for detailed rules.*
 
